Fix for #210: selected sidebar group is collapsable

--- a/static/style/_navbar.scss
+++ b/static/style/_navbar.scss
@@ -34,6 +34,10 @@ nav {
       overflow: hidden;
       max-height:42px;
       transition: all 0.3s;
+      
+      .groupTitle {        
+        cursor: pointer;
+      }
 
       &.selected {
         background-color: rgba(255,255,255,1);
